# emotional_analysis

./: .gitignore  EDGE_PLAN.md  ERROR_ANALYSIS.md  README.md  api.py  arvyax_perfect_submission_notebook.ipynb  emotion_model.onnx  intensity_model.pkl  label_encoder.pkl  notebook.ipynb  predictions.csv  pyproject.toml  state_model.pkl
backup/: arvyax_ml_assignment_notebook.ipynb  arvyax_ml_assignment_notebook_fixed.ipynb  notebook_upgraded_final.ipynb
data/: .~lock.Sample_arvyax_reflective_dataset.xlsx - Dataset_120.csv#
frontend/src/: App.jsx  api.js
