[project]
name = "emotion-ai-api"
version = "0.1.0"
description = "Emotion prediction API using FastAPI and ML models"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "joblib"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true